--- a/apps/app/src/app/components/topbar/kb-switch/kb-switch.component.html
+++ b/apps/app/src/app/components/topbar/kb-switch/kb-switch.component.html
@@ -3,6 +3,7 @@
      @dropdown>
   <button *ngFor="let kb of kbs"
           class="kb-switch-item"
+          [disabled]="!kb.role_on_kb"
           (click)="goToKb(kb)">
     <span>{{ kb.title }}</span>
     <svg-icon *ngIf="kb.state === 'PUBLISHED'"
