--- a/apps/app/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.html
+++ b/apps/app/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.html
@@ -11,47 +11,42 @@
     </div>
   </div>
 
-  <div class="add-user"
-       *ngIf="canAddUsers | async">
-    <form (ngSubmit)="addUser()"
-          [formGroup]="addForm"
-          fxLayout="row"
-          fxLayoutGap="24px"
-          fxLayoutAlign="start center">
-      <input type="email"
-             formControlName="email"
-             stfFilterInput
-             [inputHeight]="32"
-             placeholder="{{ 'accounts.add_user_input' | translate }}">
-      <select stfSelect
-              selectSize="small"
-              selectColor="white"
-              formControlName="role">
-        <option value=""
-                *ngIf="addForm.value.role ===''">
-          {{ 'generic.role' | translate }}
-        </option>
-        <option *ngFor="let role of allowedRoles"
-                [value]="role">
-          {{ roleTitles[role] | translate }}
-        </option>
-      </select>
-      <stf-button type="submit"
-                  [disabled]="addForm.invalid"
-                  size="small"
-                  color="secondary"
-                  minWidth="160px">
-        {{ 'account.add_user' | translate }}
-      </stf-button>
-    </form>
-    <stf-expander [expanded]="!!message">
-      <stf-expander-content>
-        <div class="user-added"
-             [innerHTML]="message">
-        </div>
-      </stf-expander-content>
-    </stf-expander>
-  </div>
+  <ng-container *ngIf="isAdmin | async">
+    <div class="add-user"
+        *ngIf="canAddUsers | async">
+      <form (ngSubmit)="addUser()"
+            [formGroup]="addForm"
+            fxLayout="row"
+            fxLayoutGap="24px"
+            fxLayoutAlign="start center">
+        <input type="email"
+              formControlName="email"
+              stfFilterInput
+              [inputHeight]="32"
+              placeholder="{{ 'accounts.add_user_input' | translate }}">
+        <select stfSelect
+                selectSize="small"
+                selectColor="white"
+                formControlName="role">
+          <option value=""
+                  *ngIf="addForm.value.role ===''">
+            {{ 'generic.role' | translate }}
+          </option>
+          <option *ngFor="let role of initialRoles"
+                  [value]="role">
+            {{ roleTitles[role] | translate }}
+          </option>
+        </select>
+        <stf-button type="submit"
+                    [disabled]="addForm.invalid"
+                    size="small"
+                    color="secondary"
+                    minWidth="160px">
+          {{ 'account.add_user' | translate }}
+        </stf-button>
+      </form>
+    </div>
+  </ng-container>
 
   <table cdk-table
          [dataSource]="usersKb | async"
@@ -81,7 +76,6 @@
                 [disabled]="isItMe(user.id)">
           <ng-container *ngFor="let role of roles">
             <option
-              *ngIf="!(role === 'SOWNER' && !isItMe(user.id))"
               [value]="role">
               {{ roleTitles[role] | translate }}
             </option>
