--- a/apps/app/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.scss
+++ b/apps/app/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.scss
@@ -21,18 +21,16 @@
   }
 
   .add-user {
+    width: 775px;
     margin-bottom: 36px;
     input {
-      width: 300px;
-    }
-    .user-added {
-      padding-top: 25px;
+      flex: 1 1 0;
     }
   }
 
   .user-table {
-    width: 100%;
-    padding: 24px 48px 40px 48px;
+    width: 775px;
+    padding: 24px 38px 40px 38px;
     border-spacing: 0;
     background-color: #fff;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
