avoid error we reloading page on resources list

--- a/apps/app/src/app/resources/resource-list.component.html
+++ b/apps/app/src/app/resources/resource-list.component.html
@@ -103,7 +103,8 @@
 
 
     <div class="table-container">
-      <table [dataSource]="data"
+      <table *ngIf="currentKb | async"
+             [dataSource]="data"
              cdk-table>
 
         <ng-container cdkColumnDef="select">
