--- a/apps/app/src/app/resources/edit/profile.component.html
+++ b/apps/app/src/app/resources/edit/profile.component.html
@@ -17,7 +17,7 @@
     <stf-textarea formControlName="summary"
                   initialHeight="120px"></stf-textarea>
   </div>
-  <div>
+  <!-- <div>
     <div>
       <label>{{ 'resource.thumbnail' | translate }}</label>
       <div>{{ 'resource.thumbnail.help' | translate }}</div>
@@ -28,7 +28,7 @@
                        size="small"></stf-thumbnail>
       </div>
     </div>
-  </div>
+  </div> -->
   <div>
     <label>{{ 'resource.classification' | translate }}</label>
     <div>
