--- a/apps/app/src/app/components/topbar/topbar.component.scss
+++ b/apps/app/src/app/components/topbar/topbar.component.scss
@@ -37,8 +37,17 @@
 
   .search-widget {
     display: flex;
+    align-items: center;
     margin-left: 80px;
     margin-right: auto;
+
+    // widget customisation
+    --custom-input-widget-padding: 2px;
+    --custom-input-widget-border-width: 0 0 1px 0;
+    --custom-input-widget-border-style: solid;
+    --custom-input-widget-border-color: #000;
+    --custom-input-widget-border-radius: 0;
+    --custom-input-widget-placeholder-color: transparent;
     span {
       margin-right: 10px;
     }
