--- a/apps/app/src/app/components/topbar/topbar.component.scss
+++ b/apps/app/src/app/components/topbar/topbar.component.scss
@@ -50,6 +50,7 @@
     --custom-input-widget-placeholder-color: transparent;
     span {
       margin-right: 10px;
+      font-weight: var(--stf-font-weight-light);
     }
     div {
       width: 300px;
