--- a/apps/app/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/app/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -3,8 +3,7 @@
   <div fxLayout="row"
        fxLayoutGap="30px"
        fxLayoutAlign="start start">
-    <div fxFlex="1 1 auto"
-         class="full-width">
+    <div fxFlex="1 1 auto">
       <div class="container get-started">
         <h2>
           <span>{{ 'stats.get_started' | translate }}.</span>
