basic connection to GDrive

--- a/apps/desktop/src/app/app.component.html
+++ b/apps/desktop/src/app/app.component.html
@@ -1,1 +1,2 @@
-<dtp-nx-welcome></dtp-nx-welcome> <router-outlet></router-outlet>
+<router-outlet></router-outlet>
+<div class="version">Version: {{version}}</div>
