--- a/apps/desktop/src/app/source/source.component.html
+++ b/apps/desktop/src/app/source/source.component.html
@@ -12,6 +12,7 @@
                       (selectedChange)="selection.toggle(resource)"></stf-checkbox>
       </td>
       <td>{{ resource.title }}</td>
+      <td>{{ resource.type }}</td>
     </tr>
   </table>
 </ng-container>
