--- a/libs/common/src/lib/user/profile/profile.component.scss
+++ b/libs/common/src/lib/user/profile/profile.component.scss
@@ -1,74 +1,64 @@
-.profile_form {
-    max-width: 500px;
-    min-width: 450px;
-    max-height: 650px;
-    min-height: 600px;
-    margin: 15px;
-}
 
-.feedback_error {
-    color: red;
-}
+@import 'libs/pastanaga/src/lib/styles/stf';
 
+.profile {
+  padding: 10vh 0;
 
-.form_wrapper {
-    min-height: 500px;
-}
+  &-container {
+    position: relative;
+    width: 600px;
+    margin: 0 auto;
+    border-radius: 8px;
+    background-color: #fff;
+  }
 
-.custom-file-upload {
-    border: 1px solid #ccc;
-    display: inline-block;
-    padding: 6px 12px;
+  &-close {
+    @include reset-button();
+    position: absolute;
+    top: 30px;
+    right: 26px;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
-    border-radius: 10em;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    min-height: 80vh;
+    padding: 35px 48px;
+  }
+
+  h1 {
+    margin: 36px 0 28px 0;
+    font-size: var(--stf-font-size-title);
+    font-weight: var(--stf-font-weight-bold);
+  }
+
+  .field {
+    margin-bottom: 24px;
+    display: flex;
+    align-items: center;
+    &-label {
+      flex: 0 0 150px;
+    }
+    &-input {
+      flex: 1 1 0;
+    }
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+
+  label {
+    padding-right: 15px;
+    font-weight: var(--stf-font-weight-semibold);
+  }
+
+  .actions {
+    margin-top: auto;
+    padding-top: 50px;
+    text-align: center;
+  }
 }
 
-.image {
-    background-color: var(--stf-input-background);
-    padding-left: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    .logo_wrapper {
-        text-align: center;
-        background: white;
-        width: 60px;
-        height: 60px;
-        margin-top: -44px;
-        margin-left: 90px;
-        img {
-            border: 1px solid #666;
-            margin: 4px;
-            width: 52px;
-            height: 52px;
-            overflow: hidden;
-        }
-    }
-    p {
-        color: var(--stf-secondary);
-        font-weight: var(--stf-font-weight-light);
-        font-size: var(--stf-font-size-ssmall);
-        margin-bottom: 10px;
-        margin-top: 2px;
-    }
-    h4 {
-        color: var(--stf-secondary);
-        font-weight: var(--stf-font-weight-light);
-        font-size: var(--stf-font-size-regular);
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-}
-
-input[type="file"] {
-    display: none;
-}
-
-.password_form {
-    margin: 15px;
-    min-width: 450px;;
-    .message {
-        background-color: rgba(255, 0, 0, 0.2);
-        margin-bottom: 30px;
-        padding: 8px 16px;
-    }
-}
