--- a/libs/components/src/lib/user-avatar/user-avatar-simple/user-avatar-simple.component.html
+++ b/libs/components/src/lib/user-avatar/user-avatar-simple/user-avatar-simple.component.html
@@ -1,7 +1,14 @@
-<ng-container *ngIf="userPrefs && userPrefs.avatar && userPrefs.avatar !== ''; else renderName">
-  <img class="avatar mr-0 mr-sm-16" [src]="userPrefs.avatar">
+<ng-container *ngIf="avatar">
+  <img class="avatar mr-0 mr-sm-16"
+       [src]="avatar">
 </ng-container>
+<ng-container *ngIf="!avatar">
+  <div class="avatar-text"
+       [class.avatar-text-black-mode]="blackMode"
+       [ngClass]="'avatar-text-' + size"
+       fxLayout="row" fxLayoutAlign="center center">
+    {{getInitials()}}
+  </div>
+</ng-container>
+  
 
-<ng-template #renderName>
-  <div class="avatar-text" [class.avatar-text-black-mode]="blackMode" [ngClass]="'avatar-text-' + size" fxLayout="row" fxLayoutAlign="center center" >{{getInitials()}}</div>
-</ng-template>
