show entity group titles [sc-1348]

--- a/apps/app/src/app/entities/entities.component.html
+++ b/apps/app/src/app/entities/entities.component.html
@@ -41,7 +41,7 @@
       <div class="entity-table-header-cell cell-actions"></div>
     </div>
 
-    <div *ngFor="let group of (groups | async) | keyvalue: preserveOrder; trackBy: trackByFn">
+    <div *ngFor="let group of (groups | async) | keyvalue; trackBy: trackByFn">
       <app-entity-group [group]="group.value" [groupKey]="group.key" [searchTerm]="searchTerm | async"></app-entity-group>
     </div>
   </div>
