--- a/apps/app/src/app/entities/entity-group/entity-group.component.html
+++ b/apps/app/src/app/entities/entity-group/entity-group.component.html
@@ -8,11 +8,11 @@
   [attr.aria-expanded]="expanded"
   (click)="editMode ? null : toggleExpanded($event)">
   <div class="entity-group-cell cell-color">
-    <div class="color-border" [style.background-color]="group?.color"></div>
+    <div class="color-border" [style.background-color]="group?.color || colors[groupKey]"></div>
   </div>
   <div class="entity-group-cell cell-name">
     <svg-icon src="assets/icons/chevron-right.svg"></svg-icon>
-    <span>{{ group?.title }}</span>
+    <span>{{ group?.title || ('resource.entities.' + (groupKey.toLowerCase()) | translate ) }}</span>
   </div>
   <div class="entity-group-cell cell-synonyms"></div>
   <div class="entity-group-cell cell-description"></div>
