--- a/apps/app/src/app/entities/tokens.scss
+++ b/apps/app/src/app/entities/tokens.scss
@@ -7,3 +7,5 @@ $entity-table-synonyms-flex: 1 0 112px;
 $entity-table-description-flex: 0 0 128px;
 $entity-table-presence-flex: 0 0 112px;
 $entity-table-actions-flex: 0 0 175px;
+
+$entity-fallback-color: var(--stf-gray-lighter-3);
