--- a/apps/app/src/app/entities/entity-dialog/group-select/group-select.component.scss
+++ b/apps/app/src/app/entities/entity-dialog/group-select/group-select.component.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import '../../tokens';
 
 $option-height: 40px;
 
@@ -25,6 +26,7 @@ $option-height: 40px;
     bottom: 0;
     left: 0;
     width: 10px;
+    background-color: $entity-fallback-color;
   }
   &-title {
     @include text-truncate();
@@ -67,6 +69,7 @@ $option-height: 40px;
     bottom: 0;
     left: 0;
     width: 10px;
+    background-color: $entity-fallback-color;
   }
   &-title {
     @include text-truncate();
