--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -1,7 +1,25 @@
-<div class="connectors-list">
+<div class="connectors-list"
+     *ngIf="!fields">
   <da-connector *ngFor="let connector of connectors"
                 [title]="connector.title"
                 [logo]="connector.logo"
                 [description]="connector.description"
-                (click)="goToConnector(connector.id)"></da-connector>
+                (click)="selectConnector(connector.id)"></da-connector>
 </div>
+<form *ngIf="!!fields && !!form"
+      [formGroup]="form"
+      (ngSubmit)="validate()">
+  <div *ngFor="let field of fields">
+    <label>{{ field.label }}
+      <stf-input *ngIf="field.type === 'text'"
+                 [formControlName]="field.id"></stf-input>
+      <select stfSelect
+              [formControlName]="field.id"
+              *ngIf="field.type === 'select'">
+        <option *ngFor="let option of field.options"
+                [value]="option.value">{{ option.label }}</option>
+      </select>
+    </label>
+  </div>
+  <stf-button (click)="validate()">Upload</stf-button>
+</form>
