--- a/apps/desktop/src/app/main-layout/sidebar.component.html
+++ b/apps/desktop/src/app/main-layout/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="side-bar">
-  <a routerLink="/connectors">
+  <a routerLink="/add-upload">
     <svg-icon src="assets/icons/add-rounded.svg"></svg-icon>
     <span>{{ 'generic.add' | translate }}</span>
   </a>
