--- a/apps/desktop/src/app/main-layout/topbar.component.html
+++ b/apps/desktop/src/app/main-layout/topbar.component.html
@@ -1,6 +1,6 @@
 <div class="top-bar">
   <div class="logo"
        (click)="goHome()">
-    <svg-icon src="assets/logos/logo_text.svg"></svg-icon>
+    <img src="assets/nuclia-desktop-white.svg">
   </div>
 </div>
