--- a/apps/desktop/src/app/main-layout/topbar.component.scss
+++ b/apps/desktop/src/app/main-layout/topbar.component.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .top-bar {
   position: fixed;
   top: 0;
@@ -5,15 +7,11 @@
   width: 100%;
   height: 70px;
   z-index: 900;
-  background-color: #fff;
+  background-color: $gray-black;
   display: flex;
   align-items: center;
 }
 .logo {
   cursor: pointer;
-  margin-left: 70px;
-  ::ng-deep svg {
-    height: 50px;
-    width: 150px;
-  }
+  margin-left: rythm(2);
 }
