--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -21,5 +21,6 @@
       </select>
     </label>
   </div>
-  <stf-button (click)="validate()">Upload</stf-button>
+  <stf-button (click)="validate()"
+              qa="validate">Upload</stf-button>
 </form>
