entity page improvements  [sc-1368]

--- a/apps/app/src/app/entities/entities.component.html
+++ b/apps/app/src/app/entities/entities.component.html
@@ -41,8 +41,8 @@
       <div class="entity-table-header-cell cell-actions"></div>
     </div>
 
-    <div *ngFor="let group of (groups | async) | keyvalue; trackBy: trackByFn">
-      <app-entity-group [group]="group.value" [groupKey]="group.key" [searchTerm]="searchTerm | async"></app-entity-group>
+    <div *ngFor="let group of (groups | async); trackBy: trackByFn">
+      <app-entity-group [group]="group" [searchTerm]="searchTerm | async"></app-entity-group>
     </div>
   </div>
 </div>
