--- a/apps/app/src/app/entities/synonym-list/synonym-list.component.html
+++ b/apps/app/src/app/entities/synonym-list/synonym-list.component.html
@@ -4,6 +4,7 @@
       [entity]="entity"
       [editMode]="editMode"
       [isSynonym]="true"
+      [group]="group"
       (unlink)="unlink.emit(entity)"
       (delete)="delete.emit(entity)">
     </app-entity-name>
@@ -34,6 +35,7 @@
         [entity]="entity"
         [editMode]="editMode"
         [isSynonym]="true"
+        [group]="group"
         (unlink)="unlink.emit(entity)"
         (delete)="delete.emit(entity)">
       </app-entity-name>
